Override ck check if the last active user requested to shutdown the session.

BUG: 277774